Resolves: tdf#101583 references to be expanded must be at least 2 cols/rows

... wide/tall also in named expressions.

Change-Id: If0c192def74812cc9405ae633b6f83f7021344d0
(cherry picked from commit 6b9804b8f2ca85e9eb42d344d17cfee7a7a9414c)
Reviewed-on: https://gerrit.libreoffice.org/30023
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 0230a4eccd3884ef3c3d6b7b4c6d54e5582a1268)